--- a/02_Menu_Dialog/ContextualActionMode/app/src/main/res/menu/context_men.xml
+++ b/02_Menu_Dialog/ContextualActionMode/app/src/main/res/menu/context_men.xml
@@ -2,5 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_share"
         android:icon="@drawable/ic_share_black_24dp"
-        android:title="match_parent" />
+        android:title="share" />
 </menu>
